# file_tree_to_sqlite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  out.json
src/: main.cpp  sqliteManager.h
